--- a/TEST_KICKdrum_mcu/TEST_KICKdrum_mcu.ioc
+++ b/TEST_KICKdrum_mcu/TEST_KICKdrum_mcu.ioc
@@ -100,6 +100,10 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM8_BRK_TIM12_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM8_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM8_UP_TIM13_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=BassDrum_VRC_LEVEL_PWM
@@ -282,7 +286,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM8_Init-TIM8-false-HAL-true,10-MX_TIM11_Init-TIM11-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM8_Init-TIM8-false-HAL-true,10-MX_TIM11_Init-TIM11-false-HAL-true,11-MX_TIM2_Init-TIM2-false-HAL-true,12-MX_TIM5_Init-TIM5-false-HAL-true,13-MX_TIM10_Init-TIM10-false-HAL-true,14-MX_TIM12_Init-TIM12-false-HAL-true,15-MX_TIM13_Init-TIM13-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -386,10 +390,11 @@ TIM5.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
 TIM5.Period=256
 TIM5.Prescaler=16
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM8.IPParameters=Prescaler,Period,Channel-PWM Generation2 CH2,Pulse-PWM Generation2 CH2
+TIM8.IPParameters=Prescaler,Period,Channel-PWM Generation2 CH2,Pulse-PWM Generation2 CH2,TIM_MasterOutputTrigger
 TIM8.Period=9000
 TIM8.Prescaler=56000
 TIM8.Pulse-PWM\ Generation2\ CH2=0
+TIM8.TIM_MasterOutputTrigger=TIM_TRGO_OC2REF
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode-CDC_FS=Cdc
