--- a/TEST_KICKdrum_mcu/TEST_KICKdrum_mcu.ioc
+++ b/TEST_KICKdrum_mcu/TEST_KICKdrum_mcu.ioc
@@ -9,13 +9,14 @@ Mcu.CPN=STM32F405RGT6
 Mcu.Family=STM32F4
 Mcu.IP0=I2C1
 Mcu.IP1=I2C2
-Mcu.IP10=TIM8
-Mcu.IP11=TIM10
-Mcu.IP12=TIM11
-Mcu.IP13=TIM12
-Mcu.IP14=TIM13
-Mcu.IP15=USB_DEVICE
-Mcu.IP16=USB_OTG_FS
+Mcu.IP10=TIM5
+Mcu.IP11=TIM8
+Mcu.IP12=TIM10
+Mcu.IP13=TIM11
+Mcu.IP14=TIM12
+Mcu.IP15=TIM13
+Mcu.IP16=USB_DEVICE
+Mcu.IP17=USB_OTG_FS
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SPI1
@@ -23,8 +24,8 @@ Mcu.IP5=SYS
 Mcu.IP6=TIM1
 Mcu.IP7=TIM2
 Mcu.IP8=TIM3
-Mcu.IP9=TIM5
-Mcu.IPNb=17
+Mcu.IP9=TIM4
+Mcu.IPNb=18
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -69,19 +70,22 @@ Mcu.Pin43=VP_SYS_VS_Systick
 Mcu.Pin44=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin45=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin46=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin47=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin48=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin49=VP_TIM10_VS_no_output1
+Mcu.Pin47=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin48=VP_TIM8_VS_ControllerModeTrigger
+Mcu.Pin49=VP_TIM8_VS_ClockSourceINT
 Mcu.Pin5=PC0
-Mcu.Pin50=VP_TIM11_VS_ClockSourceINT
-Mcu.Pin51=VP_TIM12_VS_ClockSourceINT
-Mcu.Pin52=VP_TIM13_VS_ClockSourceINT
-Mcu.Pin53=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin50=VP_TIM8_VS_ClockSourceITR
+Mcu.Pin51=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin52=VP_TIM10_VS_no_output1
+Mcu.Pin53=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin54=VP_TIM12_VS_ClockSourceINT
+Mcu.Pin55=VP_TIM13_VS_ClockSourceINT
+Mcu.Pin56=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=54
+Mcu.PinsNb=57
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
@@ -390,11 +394,11 @@ TIM5.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
 TIM5.Period=256
 TIM5.Prescaler=16
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM8.IPParameters=Prescaler,Period,Channel-PWM Generation2 CH2,Pulse-PWM Generation2 CH2,TIM_MasterOutputTrigger
+TIM8.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger,TIM_MasterSlaveMode,Channel-PWM Generation2 CH2
 TIM8.Period=9000
 TIM8.Prescaler=56000
-TIM8.Pulse-PWM\ Generation2\ CH2=0
-TIM8.TIM_MasterOutputTrigger=TIM_TRGO_OC2REF
+TIM8.TIM_MasterOutputTrigger=TIM_TRGO_RESET
+TIM8.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode-CDC_FS=Cdc
@@ -419,9 +423,15 @@ VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 VP_TIM8_VS_ClockSourceINT.Mode=Internal
 VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
+VP_TIM8_VS_ClockSourceITR.Mode=TriggerSource_ITR0
+VP_TIM8_VS_ClockSourceITR.Signal=TIM8_VS_ClockSourceITR
+VP_TIM8_VS_ControllerModeTrigger.Mode=Trigger Mode
+VP_TIM8_VS_ControllerModeTrigger.Signal=TIM8_VS_ControllerModeTrigger
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
-isbadioc=false
+isbadioc=true
