--- a/TEST_KICKdrum_mcu/TEST_KICKdrum_mcu.ioc
+++ b/TEST_KICKdrum_mcu/TEST_KICKdrum_mcu.ioc
@@ -71,21 +71,23 @@ Mcu.Pin44=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin45=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin46=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin47=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin48=VP_TIM8_VS_ControllerModeTrigger
-Mcu.Pin49=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin48=VP_TIM4_VS_no_output2
+Mcu.Pin49=VP_TIM8_VS_ControllerModeTrigger
 Mcu.Pin5=PC0
-Mcu.Pin50=VP_TIM8_VS_ClockSourceITR
-Mcu.Pin51=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin52=VP_TIM10_VS_no_output1
-Mcu.Pin53=VP_TIM11_VS_ClockSourceINT
-Mcu.Pin54=VP_TIM12_VS_ClockSourceINT
-Mcu.Pin55=VP_TIM13_VS_ClockSourceINT
-Mcu.Pin56=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin50=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin51=VP_TIM8_VS_ClockSourceITR
+Mcu.Pin52=VP_TIM8_VS_OPM
+Mcu.Pin53=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin54=VP_TIM10_VS_no_output1
+Mcu.Pin55=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin56=VP_TIM12_VS_ClockSourceINT
+Mcu.Pin57=VP_TIM13_VS_ClockSourceINT
+Mcu.Pin58=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=57
+Mcu.PinsNb=59
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
@@ -104,10 +106,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM8_BRK_TIM12_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM8_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM8_UP_TIM13_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=BassDrum_VRC_LEVEL_PWM
@@ -290,7 +289,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM8_Init-TIM8-false-HAL-true,10-MX_TIM11_Init-TIM11-false-HAL-true,11-MX_TIM2_Init-TIM2-false-HAL-true,12-MX_TIM5_Init-TIM5-false-HAL-true,13-MX_TIM10_Init-TIM10-false-HAL-true,14-MX_TIM12_Init-TIM12-false-HAL-true,15-MX_TIM13_Init-TIM13-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM8_Init-TIM8-false-HAL-true,10-MX_TIM11_Init-TIM11-false-HAL-true,11-MX_TIM2_Init-TIM2-false-HAL-true,12-MX_TIM5_Init-TIM5-false-HAL-true,13-MX_TIM10_Init-TIM10-false-HAL-true,14-MX_TIM12_Init-TIM12-false-HAL-true,15-MX_TIM13_Init-TIM13-false-HAL-true,16-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -352,7 +351,7 @@ SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
 SH.S_TIM3_CH4.ConfNb=1
 SH.S_TIM5_CH1.0=TIM5_CH1,PWM Generation1 CH1
 SH.S_TIM5_CH1.ConfNb=1
-SH.S_TIM8_CH2.0=TIM8_CH2,PWM Generation2 CH2
+SH.S_TIM8_CH2.0=TIM8_CH2,Output Compare2 CH2
 SH.S_TIM8_CH2.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
 SPI1.CalculateBaudRate=656.25 KBits/s
@@ -389,15 +388,21 @@ TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM3.IPParameters=Prescaler,Period,Channel-PWM Generation1 CH1,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
 TIM3.Period=256
 TIM3.Prescaler=16
+TIM4.Channel-PWM\ Generation2\ No\ Output=TIM_CHANNEL_2
+TIM4.IPParameters=Channel-PWM Generation2 No Output,Prescaler,Period,TIM_MasterOutputTrigger
+TIM4.Period=9000
+TIM4.Prescaler=28000
+TIM4.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM5.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM5.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
 TIM5.Period=256
 TIM5.Prescaler=16
-TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM8.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger,TIM_MasterSlaveMode,Channel-PWM Generation2 CH2
-TIM8.Period=9000
+TIM8.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
+TIM8.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger,TIM_MasterSlaveMode,Channel-Output Compare2 CH2,Pulse-Output Compare2 CH2
+TIM8.Period=78
 TIM8.Prescaler=56000
-TIM8.TIM_MasterOutputTrigger=TIM_TRGO_RESET
+TIM8.Pulse-Output\ Compare2\ CH2=76
+TIM8.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM8.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS
@@ -425,13 +430,17 @@ VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+VP_TIM4_VS_no_output2.Mode=PWM Generation2 No Output
+VP_TIM4_VS_no_output2.Signal=TIM4_VS_no_output2
 VP_TIM8_VS_ClockSourceINT.Mode=Internal
 VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
-VP_TIM8_VS_ClockSourceITR.Mode=TriggerSource_ITR0
+VP_TIM8_VS_ClockSourceITR.Mode=TriggerSource_ITR2
 VP_TIM8_VS_ClockSourceITR.Signal=TIM8_VS_ClockSourceITR
 VP_TIM8_VS_ControllerModeTrigger.Mode=Trigger Mode
 VP_TIM8_VS_ControllerModeTrigger.Signal=TIM8_VS_ControllerModeTrigger
+VP_TIM8_VS_OPM.Mode=OPM_bit
+VP_TIM8_VS_OPM.Signal=TIM8_VS_OPM
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
-isbadioc=true
+isbadioc=false
